--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,13 @@
 </head>
 
 <body>
-    <div id="container">
+    <div id="container1">
         <svg id="map" width="975" height="610" viewbox="0 0 975 610">
         </svg>
+    </div>
+    <div id="container2">
+    </div>
+    <div id="container3">
     </div>
 </body>
 </html>
