--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div id="container">
+    <div id="container1">
         <svg id="map" width="975" height="610" viewbox="0 0 975 610">
         </svg>
     </div>
