--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,16 @@
     <div id="container2">
     </div>
     <div id="container3">
+        <h2>See how variables affect delays!</h2>
+        <svg id="canvas" width="975" height="610" viewbox="0 0 975 610">
+        </svg>
+        <select id="firstDropdown">
+            <option value="categoryA">Category A</option>
+            <option value="categoryB">Category B</option>
+        </select>
+        <select id="secondDropdown">
+            <option value="">Select an option</option>
+        </select>
     </div>
 </body>
 </html>
