--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,22 @@
     </div>
     <div id="container3">
         <h2>See how variables affect delays!</h2>
-        <svg id="canvas" width="975" height="610" viewbox="0 0 975 610">
-        </svg>
-        <select id="firstDropdown">
-            <option value="categoryA">Category A</option>
-            <option value="categoryB">Category B</option>
-        </select>
-        <select id="secondDropdown">
-            <option value="">Select an option</option>
-        </select>
+        <div id="canvasDiv">
+            <svg id="leftCanvas" width="400" height="610" viewbox="0 0 975 610">
+            </svg>
+            <svg id="rightCanvas" width="400" height="610" viewbox="0 0 975 610">
+            </svg>
+        </div>
+        <div id="menuDiv" width="100" height="610">
+            <select id="firstDropdown">
+                <option value="ds1">data1</option>
+                <option value="ds2" selected="selected">data2</option> 
+                <option value="ds3">data3</option>
+            </select>
+            <select id="secondDropdown">
+                <option value="">Select an option</option>
+            </select>
+        </div>
     </div>
 </body>
 </html>
