--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script defer src="http://d3js.org/topojson.v1.min.js"></script>
     <script type="module" src="index.js"></script>
-    <style src="index.css"></style>
+    <link rel="stylesheet" href="index.css"></style>
 </head>
 
 <body>
