--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,13 @@
                 <g class="labels"></g>
             </g>
         </svg>
+        <div class="sidebar">
+            <h2 id="airportname"></h2>
+            <p id="summary"></p>
+            <div id="routes">
+                <table id="routes"></table>
+            </div>
+        </div>
         <div class="d3cache" style="display: none;"></div>
     </div>
     <div id="container2">
