Dataset import beginninge

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                 <option>Delta</option>
                 <option>Blue</option>
             </datalist>
-            <input type="text" autoComplete="on" list="suggestions"/> 
+            <input id="suggestionsInput" type="text" autoComplete="on" list="suggestions"/> 
         </div>
     </div>
 </body>
