--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,7 @@
     <div id="container3">
         <h2>How does <span>airline</span> affect delays?</h2>
         <div id="canvasDiv">
-            <svg id="leftCanvas" width="400" height="610" viewbox="0 0 975 610">
-            </svg>
-            <svg id="rightCanvas" width="400" height="610" viewbox="0 0 975 610">
+            <svg id="canvas" width="800" height="500" viewbox="0 0 800 500">
             </svg>
         </div>
         <div id="menuDiv" width="100" height="610">
@@ -43,8 +41,6 @@
                 <option value="dsMonth">Month</option>
             </select>
             <datalist id="suggestions">
-                <option>Delta</option>
-                <option>Blue</option>
             </datalist>
             <input id="suggestionsInput" type="text" autoComplete="on" list="suggestions"/> 
         </div>
