--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,8 @@
             <input id="suggestionsInput" type="text" autoComplete="on" list="suggestions"/> 
         </div>
         <div id="canvasDiv">
-            <svg id="canvas" width="800" height="500" viewbox="0 0 800 500">
+            <svg id="canvas" width="800" height="500" viewbox="0 0 800 500" background-color="lightblue">
+                <rect width="100%" height="100%" fill="lightgray"/>
             </svg>
         </div>
     </div>
