Slight changes to html, some functionality for bars

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <div id="container2">
     </div>
     <div id="container3">
-        <h4>How does the <span id="factorName">your mom</span> affect your delays?</h4>
+        <h4>How does the <span id="factorName">origin airport</span> affect your delays?</h4>
         <div id="menuDiv">
             <select id="firstDropdown">
                 <option value="dsAirline">Airline</option>
