--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
 <body>
     <div id="container1">
         <svg id="map" width="975" height="610" viewbox="0 0 975 610">
+            <defs>
+                <linearGradient id="redBlueGrad">
+                    <stop offset="0" stop-color="gold"/>
+                    <stop offset="100%" stop-color="red"/>
+                </linearGradient>
+            </defs>
             <g id="background"></g>
             <g id="vis">
                 <g class="connections"></g>
