Added multiple functional bars

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         </div>
         <div id="canvasDiv">
             <svg id="canvas" width="800" height="500" viewbox="0 0 800 500" background-color="lightblue">
-                <rect width="100%" height="100%" fill="lightgray"/>
+                <rect width="100%" height="100%" fill="white"/>
             </svg>
         </div>
     </div>
