Added datasets, one little refactor in vis3.

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div>
-        <h1>Flight Delays</h1>
+        <h1>What's the deal with <span>Midway?</span></h1>
         <h3>Scott Milner, Isaac Criddle</h3>
         <p>Explore flight delays and their causes from 2024!</p>
     </div>
