--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,8 @@
 
 <body>
     <div class="article">
-        <h1>What's the deal with <span>MDW</span>?</h1>
-        <h3>Scott Milner</h3>
-        <h3>Isaac Criddle</h3>
+        <h1>What's the deal with the delays at <span>MDW</span>?</h1>
+        <p style="font-weight: 700;">By Scott Milner and Isaac Criddle</p>
         <p>Explore flight delays and their causes from 2024!</p>
     </div>
     <div id="container1">
@@ -52,7 +51,7 @@
         </div>
         <div id="canvasDiv">
             <svg id="canvas" width="800" height="500" viewbox="0 0 800 500" background-color="lightblue">
-                <rect width="100%" height="100%" fill="white"/>
+                <rect width="100%" height="100%" fill="#fafafa"/>
             </svg>
         </div>
     </div>
