I don't remember what I changed in index.html teehee

--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,8 @@
             <input id="suggestionsInput" type="text" autoComplete="on" list="suggestions"/> 
         </div>
         <div id="canvasDiv">
-            <svg id="canvas" width="800" height="500" viewbox="0 0 800 500" background-color="lightblue">
-                <rect width="100%" height="100%" fill="#fafafa"/>
+            <svg id="canvas" width="1000" height="500" viewbox="0 0 1000 500" background-color="lightblue">
+                <rect width="100%" height="100%" fill="#efeee9"/>
             </svg>
         </div>
     </div>
