Added vis4 file

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,7 @@
             </div>
         </div>
         <div class="d3cache" style="display: none;"></div>
+        <p class="Caption">Take a look at your own airport's delays!</p>
     </div>
     <div class="article">
         <br>
@@ -105,8 +106,13 @@
         <br>
         <br>
     </div>
+    <div id="container4">
+        <div id="graphCanvasDiv">
+            <svg id="graphCanvas" width="1000" height="500" viewbox="0 0 1000 500">
+            </svg>
+        </div>
+    </div>
     <div id="container2">
-        <p style="font-style: italic;">&lt;insert dot plot of delay rate x size of airport&gt;</p>
     </div>
     <div class="article">
         <br>
