Progress on vis4

--- a/src/index.html
+++ b/src/index.html
@@ -63,14 +63,14 @@
         <br>
         <br>
         <p>
-            Midway did only a little bit worse than the national average in 2024!
+            Midway did only a touch worse than the national average in 2024!
             <br><br>
             The worst large airport for delays was Baltimore/Washington International (BWI) with a whopping 29.4% delay rate,
             followed closely by Dallas Fort Worth International (DFW) airport at 28.8%.
             (For our purposes, we only count departure delays that take longer than 15 minutes).
             <br><br>
             If you’re planning around flight delays, other factors matter beyond your airport of origin.
-            Consider the destination airport. For instance,. 54.0% of 2024’s flights from BWI to Oakland were delayed,
+            Consider the destination airport. For instance, 54.0% of 2024’s flights from BWI to Oakland were delayed,
             but only 21.2% of the flights from Baltimore to San Jose were delayed, even though both destination airports are in the Bay area.</p>
         <br>
         <br>
@@ -118,7 +118,7 @@
         <br>
         <br>
         <p>
-            Delays often propagate–a late flight in the morning can cause another late afternoon flight.
+            Delays often propagate; a late flight in the morning can cause another late afternoon flight.
             Evening flights are more than twice as likely to be delayed as morning flights.
             <br><br>
             Once your flight’s been pushed back by 15 minutes, you can expect to be waiting for over an hour.
