More progress on vis4

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
             <br><br>
             In my case, a 15 minute delay meant the difference between an 8 hour trip and a 21 hour trip.
             <br><br>
-            In 2024, 1.4 million American domestic flights were delayed by at least 15 minutes.
-            21.7% of all domestic flights were either cancelled or delayed.
-            These delays alone cause around 185 million hours of wasted time a year,
-            just from people sitting in gates waiting for their flights to leave.
+            In 2024, <span class="emphasizedRed">1.4 million</span> American domestic flights were delayed by at least 15 minutes.
+            <span class="emphasizedRed">21.7%</span>% of all domestic flights were either cancelled or delayed.
+            These delays alone caused around 185 million hours of wasted passenger time,
+            let alone the time spent recovering from the disturbance.
             <br><br>
             At least in my family, Chicago’s two main airports are legendary for their volatility.
             We tell horror stories around the campfire about days lost to its endless delays and queues.
@@ -65,13 +65,13 @@
         <p>
             Midway did only a touch worse than the national average in 2024!
             <br><br>
-            The worst large airport for delays was Baltimore/Washington International (BWI) with a whopping 29.4% delay rate,
-            followed closely by Dallas Fort Worth International (DFW) airport at 28.8%.
+            The worst large airport for delays was Baltimore/Washington International (BWI) with a whopping <span class="emphasized">29.4%</span> delay rate,
+            followed closely by Dallas Fort Worth International (DFW) airport at <span class="emphasized">28.8%</span>.
             (For our purposes, we only count departure delays that take longer than 15 minutes).
             <br><br>
             If you’re planning around flight delays, other factors matter beyond your airport of origin.
-            Consider the destination airport. For instance, 54.0% of 2024’s flights from BWI to Oakland were delayed,
-            but only 21.2% of the flights from Baltimore to San Jose were delayed, even though both destination airports are in the Bay area.</p>
+            Consider destination airport. For instance, <span class="emphasizedRed">54.0%</span> of 2024’s flights from BWI to Oakland were delayed,
+            but only <span class="emphasizedBlue">21.2%</span> of the flights from Baltimore to San Jose were delayed, even though both destination airports are in the Bay area.</p>
         <br>
         <br>
     </div>
@@ -99,7 +99,7 @@
         <br>
         <p>
             Bigger airports have slightly more delays than smaller airports on average,
-            (<span style="font-family: 'Times New Roman', Times, serif; font-style: italic;">R</span> = 0.22),
+            (<span style="font-family: 'Times New Roman', Times, serif; font-style: italic;">R</span> = 0.34),
             so if you need to make a connecting flight during a busy time of the year,
             it might be worth paying a little more for a ticket that avoids the largest airports. 
         </p>
@@ -122,7 +122,8 @@
             Evening flights are more than twice as likely to be delayed as morning flights.
             <br><br>
             Once your flight’s been pushed back by 15 minutes, you can expect to be waiting for over an hour.
-            Not all delays are created equal; delays caused by weather average a 93 minute wait time, while security delays average 38 minutes.
+            Not all delays are created equal; delays caused by weather average a <span class="emphasized">93 minute</span> wait time, 
+            while security delays average <span class="emphasized">38 minutes</span>.
             <br><br>
             [Are bigger airports better able to deal with late aircraft delays?]
             <br><br>
