--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="article">
-        <h1>How not to get stuck at <span class="airportInTitle">MDW</span></h1>
+        <h1>How to not get stuck at <span class="airportInTitle">MDW</span></h1>
         <h3>A data-driven guide</h3>
         <p style="font-weight: 700;">Scott Milner and Isaac Criddle</p>
         <p style="font-style: italic; font-weight: 300;">Explore flight delays and their causes!</p>
@@ -28,7 +28,7 @@
             In my case, a 15 minute delay meant the difference between an 8 hour trip and a 21 hour trip.
             <br><br>
             In 2024, <span class="emphasizedRed">1.4 million</span> American domestic flights were delayed by at least 15 minutes.
-            <span class="emphasizedRed">21.7%</span>% of all domestic flights were either cancelled or delayed.
+            <span class="emphasizedRed">21.7%</span> of all domestic flights were either cancelled or delayed.
             These delays alone caused around 185 million hours of wasted passenger time,
             let alone the time spent recovering from the disturbance.
             <br><br>
