"Added caption to vis4, some padding fixes"

--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,11 @@
             <svg id="graphCanvas" width="1000" height="500" viewbox="0 0 1000 500">
             </svg>
         </div>
+        <p class="Caption">
+            Shoutout to Hawaii's airports (HNL, OGG, LIH, ITO)!
+            They have low delay rates despite their large throughput.
+
+        </p>
     </div>
     <div id="container2">
     </div>
