--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             <br><br>
             In 2024, <span class="emphasizedRed">1.4 million</span> American domestic flights were delayed by at least 15 minutes.
             <span class="emphasizedRed">21.7%</span> of all domestic flights were either cancelled or delayed.
-            These delays alone caused around 185 million hours of wasted passenger time,
+            These delays alone caused around <span class="emphasizedRed">185 million hours</span> of wasted passenger time,
             let alone the time spent recovering from the disturbance.
             <br><br>
             At least in my family, Chicago’s two main airports are legendary for their volatility.
@@ -65,8 +65,8 @@
         <p>
             Midway did only a touch worse than the national average in 2024!
             <br><br>
-            The worst large airport for delays was Baltimore/Washington International (BWI) with a whopping <span class="emphasized">29.4%</span> delay rate,
-            followed closely by Dallas Fort Worth International (DFW) airport at <span class="emphasized">28.8%</span>.
+            The worst large airport for delays was Baltimore/Washington International (BWI) with a whopping <span class="emphasizedRed">29.4%</span> delay rate,
+            followed closely by Dallas Fort Worth International (DFW) airport at <span class="emphasizedRed">28.8%</span>.
             (For our purposes, we only count departure delays that take longer than 15 minutes).
             <br><br>
             If you’re planning around flight delays, other factors matter beyond your airport of origin.
@@ -129,8 +129,8 @@
             Evening flights are more than twice as likely to be delayed as morning flights.
             <br><br>
             Once your flight’s been pushed back by 15 minutes, you can expect to be waiting for over an hour.
-            Not all delays are created equal; delays caused by weather average a <span class="emphasized">93 minute</span> wait time, 
-            while security delays average <span class="emphasized">38 minutes</span>.
+            Not all delays are created equal; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
+            while security delays average <span class="emphasizedBlue">38 minutes</span>.
             <br><br>
             [Are bigger airports better able to deal with late aircraft delays?]
             <br><br>
@@ -138,6 +138,27 @@
         </p>
         <br>
         <br>
+    </div>
+    <div id="container5">
+        <h4 class="article">How bad are the delays <span id="factorName5">at origin airport</span>?</h4>
+        <div id="canvasDiv5">
+            <svg id="canvas5" width="1000" height="500" viewbox="0 0 1000 500" background-color="lightblue">
+                <rect width="100%" height="100%" fill="#efeee9"/>
+            </svg>
+        </div>
+        <div id="menuDiv5">
+            <select id="firstDropdown5">
+                <option value="dsOrigin" selected="selected">Origin Airport</option>
+                <option value="dsDest">Destination Airport</option>
+                <option value="dsAirline">Airline</option>
+                <option value="dsTime">Time of Day</option> 
+                <option value="dsMonth">Month</option>
+            </select>
+            <datalist id="suggestions5">
+            </datalist>
+            <input id="suggestionsInput5" type="text" autoComplete="on" list="suggestions5"/> 
+        </div>
+        <p class="Caption">Check out your own airport / airline / time of day / time of year!</p>
     </div>
 </body>
 </html>
