--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
             </svg>
         </div>
         <p class="Caption">
-            Shoutout to Hawaii's airports (HNL, OGG, LIH, ITO)!
+            Looks like Hawaii has amazing airports (HNL, OGG, LIH, ITO)!
             They have low delay rates despite their large throughput.
 
         </p>
@@ -126,15 +126,8 @@
         <br>
         <p>
             Delays often propagate; a late flight in the morning can cause another late afternoon flight.
-            Evening flights are more than twice as likely to be delayed as morning flights.
-            <br><br>
-            Once your flight’s been pushed back by 15 minutes, you can expect to be waiting for over an hour.
-            Not all delays are created equal; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
-            while security delays average <span class="emphasizedBlue">38 minutes</span>.
-            <br><br>
-            [Are bigger airports better able to deal with late aircraft delays?]
-            <br><br>
-            [Are there more weather delays in coastal airports?]
+            Evening flights are more than twice as likely to be delayed as morning flights. That said, if you get delayed in the early morning,
+            the wait time tends to be significantly higher than any other time of day.
         </p>
         <br>
         <br>
@@ -158,7 +151,25 @@
             </datalist>
             <input id="suggestionsInput5" type="text" autoComplete="on" list="suggestions5"/> 
         </div>
-        <p class="Caption">Check out your own airport / airline / time of day / time of year!</p>
+        <p class="Caption">Check out your own airport / airline / time of day / time of year!
+            Even though Chicago's Midway airport has more frequent delays than the average airport,
+            its delays are a touch shorter on average.</p>
     </div>
+    <div class="article">
+        <br>
+        <br>
+        <p>
+            Once your flight’s been pushed back by 15 minutes, you can expect to be waiting for over an hour.
+            Not all delays are created equal; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
+            while security delays average <span class="emphasizedBlue">38 minutes</span>.
+            <br><br>
+            [Are bigger airports better able to deal with late aircraft delays?]
+            <br><br>
+            [Are there more weather delays in coastal airports?]
+        </p>
+        <br>
+        <br>
+    </div>
+    
 </body>
 </html>
