Vis5 done as far as I can tell.

--- a/src/index.html
+++ b/src/index.html
@@ -159,9 +159,11 @@
         <br>
         <br>
         <p>
-            Once your flight’s been pushed back by 15 minutes, you can expect to be waiting for over an hour.
+            Once your flight’s been pushed back by 15 minutes, your expected wait time jumps to over an hour long.
             Not all delays are created equal; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
             while security delays average <span class="emphasizedBlue">38 minutes</span>.
+            Larger airports have somewhat lower delay times than smaller airports, probably because they're have more flexibility in terms of personnel,
+            equipment and funding.
             <br><br>
             [Are bigger airports better able to deal with late aircraft delays?]
             <br><br>
