some rewriting within the .html

--- a/src/index.html
+++ b/src/index.html
@@ -101,9 +101,10 @@
         <br>
         <p>
             Bigger airports have slightly more delays than smaller airports on average,
-            (<span style="font-family: 'Times New Roman', Times, serif; font-style: italic;">R</span> = 0.34),
-            so if you need to make a connecting flight during a busy time of the year,
-            it might be worth paying a little more for a ticket that avoids the largest airports. 
+            (<span style="font-family: 'Times New Roman', Times, serif; font-style: italic;">R</span> = 0.34).
+            If you're someone who hates being held up,
+            it might be worth paying a little more for a ticket that avoids the largest airports.
+            
         </p>
         <br>
         <br>
@@ -125,15 +126,20 @@
         <br>
         <br>
         <p>
-            Delays often propagate; a late flight in the morning can cause another late afternoon flight.
-            Evening flights are more than twice as likely to be delayed as morning flights. That said, if you get delayed in the early morning,
+            
+        </p>
+        <p>
+            Delays often propagate; a late flight in the morning can cause another late afternoon flight,
+            so evening flights are more than twice as likely to be delayed as morning flights.
+            That said, if you get delayed in the early morning,
             the wait time tends to be significantly higher than any other time of day.
+            If you're going to change anything about your behavior though, consider leaving early in the morning if you can.
         </p>
         <br>
         <br>
     </div>
     <div id="container5">
-        <h4 class="article">How bad are the delays <span id="factorName5">at origin airport</span>?</h4>
+        <h4 class="article">How bad are the delays <span id="factorName5">at a given origin airport</span>?</h4>
         <div id="canvasDiv5">
             <svg id="canvas5" width="1000" height="500" viewbox="0 0 1000 500" background-color="lightblue">
                 <rect width="100%" height="100%" fill="#efeee9"/>
