More edits to the text, added some words

--- a/src/index.html
+++ b/src/index.html
@@ -131,9 +131,16 @@
         <p>
             Delays often propagate; a late flight in the morning can cause another late afternoon flight,
             so evening flights are more than twice as likely to be delayed as morning flights.
-            That said, if you get delayed in the early morning,
-            the wait time tends to be significantly higher than any other time of day.
             If you're going to change anything about your behavior though, consider leaving early in the morning if you can.
+        </p>
+        <p>
+            That said, if you get delayed in the early morning,
+            the wait between midnight and 6am tends to be significantly higher than any other time of day, perhaps for staffing reasons.
+        </p>
+        <p>
+            Something worth considering beyond <span class="emphasizedRed">whether or not</span>
+            you are delayed is <span class="emphasizedBlue">by how much</span> your schedule is pushed back.
+            Below, you can explore severity of delay by airport, airline or timing.
         </p>
         <br>
         <br>
@@ -166,10 +173,10 @@
         <br>
         <p>
             Once your flight’s been pushed back by 15 minutes, your expected wait time jumps to over an hour long.
-            Not all delays are created equal; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
-            while security delays average <span class="emphasizedBlue">38 minutes</span>.
             Larger airports have somewhat lower delay times than smaller airports, probably because they're have more flexibility in terms of personnel,
             equipment and funding.
+            Not all delays are created equal; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
+            while security delays average <span class="emphasizedBlue">38 minutes</span>.
             <br><br>
             [Are bigger airports better able to deal with late aircraft delays?]
             <br><br>
