Fixed vis3 dest vs origin bug

--- a/src/index.html
+++ b/src/index.html
@@ -185,6 +185,10 @@
         <br>
         <br>
     </div>
-    
+    <div id="container2">
+        <svg id="map2" width="975" height="610" viewbox="0 0 975 610">
+        </svg>
+        <p class="Caption">Different airports have delays for different reasons Compare a few airports to get a sense for it!</p>
+    </div>
 </body>
 </html>
