--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
         <h1>How to not get stuck at <span class="airportInTitle">MDW</span></h1>
         <h3>A data-driven guide</h3>
         <p style="font-weight: 700;">Scott Milner and Isaac Criddle</p>
+        <br>
         <p style="font-style: italic; font-weight: 300;">Explore flight delays and their causes!</p>
+        <br>
         <p>
             A few months ago, I (Isaac) bought tickets to fly from Salt Lake to Richmond to visit my parents.
             After years spent in Utah Valley’s desert, I looked forward to the walks in my hometown’s forests, summer rains,
@@ -35,6 +37,7 @@
             At least in my family, Chicago’s two main airports are legendary for their volatility.
             We tell horror stories around the campfire about days lost to its endless delays and queues.
         </p>
+        <br>
         <br>
         <br>
     </div>
@@ -62,6 +65,7 @@
     <div class="article">
         <br>
         <br>
+        <br>
         <p>
             Midway did only a touch worse than the national average in 2024!
             <br><br>
@@ -72,6 +76,7 @@
             If you’re planning around flight delays, other factors matter beyond your airport of origin.
             Consider destination airport. For instance, <span class="emphasizedRed">54.0%</span> of 2024’s flights from BWI to Oakland were delayed,
             but only <span class="emphasizedBlue">21.2%</span> of the flights from Baltimore to San Jose were delayed, even though both destination airports are in the Bay area.</p>
+        <br>
         <br>
         <br>
     </div>
@@ -99,6 +104,7 @@
     <div class="article">
         <br>
         <br>
+        <br>
         <p>
             Bigger airports have slightly more delays than smaller airports on average,
             (<span style="font-family: 'Times New Roman', Times, serif; font-style: italic;">R</span> = 0.34).
@@ -106,6 +112,7 @@
             it might be worth paying a little more for a ticket that avoids the largest airports.
             
         </p>
+        <br>
         <br>
         <br>
     </div>
@@ -125,6 +132,7 @@
     <div class="article">
         <br>
         <br>
+        <br>
         <p>
             
         </p>
@@ -142,6 +150,7 @@
             you are delayed is <span class="emphasizedBlue">by how much</span> your schedule is pushed back.
             Below, you can explore severity of delay by airport, airline or timing.
         </p>
+        <br>
         <br>
         <br>
     </div>
@@ -171,6 +180,7 @@
     <div class="article">
         <br>
         <br>
+        <br>
         <p>
             Once your flight’s been pushed back by 15 minutes, your expected wait time jumps to over an hour long.
             Larger airports have somewhat lower delay times than smaller airports, probably because they're have more flexibility in terms of personnel,
@@ -184,11 +194,29 @@
         </p>
         <br>
         <br>
+        <br>
     </div>
     <div id="container2">
         <svg id="map2" width="975" height="610" viewbox="0 0 975 610">
         </svg>
-        <p class="Caption">Different airports have delays for different reasons Compare a few airports to get a sense for it!</p>
+        <p class="Caption">Different airports have delays for different reasons. Compare a few airports to get a sense for it!</p>
+    </div>
+    <div class="article">
+        <br>
+        <br>
+        <br>
+        <h3>data sources:</h3>
+        <ul>
+            <li><a href="https://www.transtats.bts.gov/Fields.asp?gnoyr_VQ=FGJ">Bureau of Transportation Statistics Database</a></li>
+            <li><a href="https://www.faa.gov/air_traffic/by_the_numbers/air-traffic-by-the-numbers-FY2024.pdf">Federal Aviation Administration Air Traffic Report</a></li>
+        </ul>
+        <br>
+        <br>
+        <p>
+            Assignment for <a href="https://magrawala.github.io/cs448b-fa25/#about">Stanford CS 448B: Data Visualization</a>
+        </p>
+        <br>
+        <br>
     </div>
 </body>
 </html>
