.html rewording, added divs for conclusion

--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,12 @@
         <br>
         <p>
             A few months ago, I (Isaac) bought tickets to fly from Salt Lake to Richmond to visit my parents.
-            After years spent in Utah Valley’s desert, I looked forward to the walks in my hometown’s forests, summer rains,
+            After years spent in Utah Valley’s desert, I was looking forward to the walks in my hometown’s forests, summer rains,
             and Virginian oysters that characterize my hometown. My travels that day were supposed to be light, with just one small layover.
             <br><br>
-            The airports had other plans for me. One slightly delayed flight led to a missed connection in Chicago,
+            The airport system had other plans for me. One slightly delayed flight led to a missed connection in Chicago,
             sprints from terminal to service desk to terminal, hours on the phone, and ultimately the worst airport experience of my life.
-            Four airports and 21 hours later, I touched down in Norfolk’s small airport.
+            Four airports and 21 hours later, I touched down in Norfolk.
             <br><br>
             In my case, a 15 minute delay meant the difference between an 8 hour trip and a 21 hour trip.
             <br><br>
@@ -35,7 +35,9 @@
             let alone the time spent recovering from the disturbance.
             <br><br>
             At least in my family, Chicago’s two main airports are legendary for their volatility.
-            We tell horror stories around the campfire about days lost to its endless delays and queues.
+            We tell horror stories around the campfire about days lost to their endless delays and queues.
+            Here's the question: Is Midway really a terrible airport, or was I just unlucky?
+            How could one avoid delayed flights?
         </p>
         <br>
         <br>
@@ -67,11 +69,12 @@
         <br>
         <br>
         <p>
-            Midway did only a touch worse than the national average in 2024!
+            Midway did only a touch worse than the national average in 2024! I must have been unlucky.
             <br><br>
-            The worst large airport for delays was Baltimore/Washington International (BWI) with a whopping <span class="emphasizedRed">29.4%</span> delay rate,
+            Of large airports, the one with the most frequent delays was Baltimore/Washington International (BWI) with a whopping <span class="emphasizedRed">29.4%</span> delay rate,
             followed closely by Dallas Fort Worth International (DFW) airport at <span class="emphasizedRed">28.8%</span>.
             (For our purposes, we only count departure delays that take longer than 15 minutes).
+            Compare to Salt Lake City (SLC), with a relatively low delay rate of <span class="emphasizedBlue">17.2%</span>.
             <br><br>
             If you’re planning around flight delays, other factors matter beyond your airport of origin.
             Consider destination airport. For instance, <span class="emphasizedRed">54.0%</span> of 2024’s flights from BWI to Oakland were delayed,
@@ -106,11 +109,12 @@
         <br>
         <br>
         <p>
-            Bigger airports have slightly more delays than smaller airports on average,
+            Bigger airports typically have delays more often than smaller airports
             (<span style="font-family: 'Times New Roman', Times, serif; font-style: italic;">R</span> = 0.34).
             If you're someone who hates being held up,
             it might be worth paying a little more for a ticket that avoids the largest airports.
-            
+            For instance, your odds of being delayed are <span class="emphasizedBlue">34%</span>
+            lower flying out of San Jose (SJC) than out of San Francisco (SFO).
         </p>
         <br>
         <br>
@@ -124,7 +128,6 @@
         <p class="Caption">
             Looks like Hawaii has amazing airports (HNL, OGG, LIH, ITO)!
             They have low delay rates despite their large throughput.
-
         </p>
     </div>
     <div id="container2">
@@ -143,7 +146,8 @@
         </p>
         <p>
             That said, if you get delayed in the early morning,
-            the wait between midnight and 6am tends to be significantly higher than any other time of day, perhaps for staffing reasons.
+            the length of your delay tends to be significantly higher between midnight and 6am than any other time of day, 
+            perhaps for staffing reasons.
         </p>
         <p>
             Something worth considering beyond <span class="emphasizedRed">whether or not</span>
@@ -185,7 +189,7 @@
             Once your flight’s been pushed back by 15 minutes, your expected wait time jumps to over an hour long.
             Larger airports have somewhat lower delay times than smaller airports, probably because they're have more flexibility in terms of personnel,
             equipment and funding.
-            Not all delays are created equal; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
+            Not all kinds of delays are the same; delays caused by weather average a <span class="emphasizedRed">93 minute</span> wait time, 
             while security delays average <span class="emphasizedBlue">38 minutes</span>.
             <br><br>
             [Are bigger airports better able to deal with late aircraft delays?]
@@ -202,6 +206,18 @@
         <p class="Caption">Different airports have delays for different reasons. Compare a few airports to get a sense for it!</p>
     </div>
     <div class="article">
+        <br>
+        <br>
+        <br>
+        <p>
+            Here have a conclusion
+        </p>
+        <ul>
+            <p>something something takeaways</p>
+            <li>Don't fly out of big airports</li>
+            <li>Don't fly out of small airports</li>
+            <li>baltimore</li>
+        </ul>
         <br>
         <br>
         <br>
